--- a/frontend/src/app/features/usuarios/usuarios.component.html
+++ b/frontend/src/app/features/usuarios/usuarios.component.html
@@ -141,7 +141,7 @@
             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
               <div class="flex justify-end space-x-2">
                 <button type="button" 
-                        (click)="selectUser(user)"
+                        (click)="openEditModal(user)"
                         class="text-blue-600 hover:text-blue-900">
                   Editar
                 </button>
